Fix menu shadows in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
     --link: #ff6;
     --linkHover: #fc0;
     --banner: #033;
-    --shadow: #fff3;
+    --shadow: #fff2;
   }
 }
 
@@ -97,7 +97,7 @@ p { margin-bottom:15px; }
 .menubar {background:url(/throb.gif) no-repeat top right var(--face); background-size: contain;}
 .menubar>button { padding:3px 5px; position:relative;}
 .menubar>button.active {border:1px inset var(--etch);}
-.menubar .menu {border: 1px outset var(--etch); border-radius:2px; box-shadow:inset 0 -1px 2px #666, inset 0 1px 2px var(--highlight), 1px 1px 20px #0004; padding:8px 2px 8px 2px;top:33px; left:0px; position:absolute; margin:0; width:fit-content; min-width:100px; z-index:999;}
+.menubar .menu {border: 1px outset var(--etch); border-radius:2px; box-shadow:inset 0 -1px 2px var(--toolbarAccent2), inset 0 1px 2px var(--highlight), 1px 1px 20px var(--shadow); padding:8px 2px 8px 2px;top:33px; left:0px; position:absolute; margin:0; width:fit-content; min-width:100px; z-index:999;}
 .menubar .menu.active {}
 .menubar .menu button {display:block; text-align:left; padding:2px 20px; width:100%;text-wrap:nowrap;}
 .menubar .menu button:hover:not(:disabled) {background:var(--activeBg); color:var(--highlight);}
